# text_to_sql_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: function_app.py
backend/answer_generator/: answer_generator.py
backend/azure_function/: function.json  function_app.py  schema_cache.json
backend/guardrails/: __init__.py  rules.yaml  validator.py
backend/models/: settings.py
backend/orchestrator/: agent.py  chains.py  tools.py  toolset.py
backend/orchestrator/prompts/: generator_prompt.txt  regenerator_prompt.txt
backend/regenerator/: fixer.py
backend/script/: run_module.py
backend/services/: openai_client.py
backend/sql_executor/: __init__.py  executor.py  schema_cache.py
backend/sql_generator/: generator.py
backend/utils/: env_loader.py  logger.py
backend/visualization/: visualisation_recommander.py
frontend/: .env.example  streamlit_app.py
frontend/models/: api_models.py
